--- a/templates/print_ledger_print.html
+++ b/templates/print_ledger_print.html
@@ -142,8 +142,8 @@
     <div class="title">LEDGER REPORT</div>
     <div class="info-row">
         <div class="left">
-            <div><strong>Item:</strong> {{ item_info.item_name if item_info else '' }}</div>
-            <div><strong>Description:</strong> {{ item_info.category if item_info else '' }}</div>
+            <div><strong>Item:</strong> {{ item_info.category if item_info else '' }}</div>
+            <div><strong>Description:</strong> {{ item_info.item_name if item_info else '' }}</div>
         </div>
         <div class="right">
             <div><strong>Head:</strong> {{ item_info.head if item_info else '' }}</div>
